tests/neg/i7529.scala
given fooOps: extension [A](a: A) with

  @nonsense    // error: not found: nonsense
  def foo = ???